...
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="150dp"
        android:gravity="center"
        android:text="00:00:00"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/start_stop_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_stop_btn"
...
